# AeonNovaFutureLabs

./: .gitignore  .zshrc  LICENSE  README.md  anfl_style_guide.xml  pyproject.toml  requirements.txt
.github/workflows/: 250208_CI_CD_INT_v1.0_ANFL.yml
ai_components/: Dockerfile
ai_components/core/: config.py  exceptions.py  logging.py
ai_components/models/: base.py  base_integration.py
ai_components/scraper/: 250208_CHAT_SCRAPER_INT_v1.0_ANFL.ts  250208_METADATA_PROCESSOR_INT_v1.0_ANFL.ts  README.md  mcp-sdk.d.ts  package-lock.json  package.json  test_scraper.ts  tsconfig.json
custom_zshrc/: 250113_SHELL_HELPERS_EXT_v1.0_ANFL.sh  250208_ALIASES_INT_v1.0_ANFL.zsh  250208_CORE_ENV_INT_v1.0_ANFL.zsh  250208_DEPLOY_HANDLER_INT_v1.0_ANFL.zsh  250208_ERROR_HANDLER_INT_v1.0_ANFL.zsh  250208_FUNCTIONS_INT_v1.0_ANFL.zsh  250208_LOGGING_INT_v1.0_ANFL.zsh  250208_MONITOR_INT_v1.0_ANFL.zsh  250208_README_INT_v1.0_ANFL.md  250208_SECURITY_INT_v1.0_ANFL.zsh  250208_SHELL_MAIN_INT_v1.0_ANFL.zsh  250208_VAULT_HANDLER_INT_v1.0_ANFL.zsh  _predeploy  aeon-nova.zsh-theme  comprehensive_file_guide.md  vault_handler.zsh
docs/: 250208_ARCHITECTURE_INT_v1.0_ANFL.md  250208_INTEGRATION_PLAN_INT_v1.0_ANFL.md  250208_ROADMAP_INT_v1.0_ANFL.md  250208_ROADMAP_UPDATE_INT_v1.0_ANFL.md  ROADMAP_ENHANCEMENTS.md
docs/api/: 250208_API_GUIDE_INT_v1.0_ANFL.md
docs/architecture/: 250208_ARCH_OVERVIEW_INT_v1.0_ANFL.md
docs/deployment/: 250208_DEPLOY_GUIDE_INT_v1.0_ANFL.md
docs/development/: 250208_DEV_GUIDE_INT_v1.0_ANFL.md
scripts/: setup.sh  verify_dependencies.py
(+174 files in other folders)
